// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its style if disabled 1`] = `
<Input
  disabled={true}
  disabledPlaceholder="disabled"
  error={false}
  placeholder="placeholder"
  success={false}
  type="text"
>
  <styled.input
    disabled={true}
    disabledPlaceholder="disabled"
    error={false}
    placeholder="disabled"
    success={false}
    theme={
      Object {
        "animation": Object {
          "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
          "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
          "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
          "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
          "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
        },
        "color": Object {
          "black": "#222222",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <StyledComponent
      disabled={true}
      disabledPlaceholder="disabled"
      error={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "boyrIJ",
            "rules": Array [
              "
",
              [Function],
              "
&:disabled {
  background-color: ",
              [Function],
              ";
}
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": Object {
                "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
                "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
                "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
                "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
                "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
              },
              "color": Object {
                "black": "#222222",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <input
            class="sc-bdVaJa boyrIJ"
            disabled=""
            placeholder="disabled"
            type="text"
          />,
        }
      }
      placeholder="disabled"
      success={false}
      theme={
        Object {
          "animation": Object {
            "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
            "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
            "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
            "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
            "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
          },
          "color": Object {
            "black": "#222222",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      type="text"
      warn={false}
    >
      <input
        className="sc-bdVaJa boyrIJ"
        disabled={true}
        placeholder="disabled"
        type="text"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`should change its style if required 1`] = `
<Input
  disabled={false}
  disabledPlaceholder="disabled"
  error={false}
  placeholder="placeholder"
  required={true}
  success={false}
  type="text"
>
  <styled.input
    disabled={false}
    disabledPlaceholder="disabled"
    error={false}
    placeholder="placeholder"
    required={true}
    success={false}
    theme={
      Object {
        "animation": Object {
          "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
          "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
          "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
          "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
          "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
        },
        "color": Object {
          "black": "#222222",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <StyledComponent
      disabled={false}
      disabledPlaceholder="disabled"
      error={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "boyrIJ",
            "rules": Array [
              "
",
              [Function],
              "
&:disabled {
  background-color: ",
              [Function],
              ";
}
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": Object {
                "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
                "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
                "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
                "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
                "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
              },
              "color": Object {
                "black": "#222222",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <input
            class="sc-bdVaJa boyrIJ"
            placeholder="placeholder"
            required=""
            type="text"
          />,
        }
      }
      placeholder="placeholder"
      required={true}
      success={false}
      theme={
        Object {
          "animation": Object {
            "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
            "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
            "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
            "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
            "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
          },
          "color": Object {
            "black": "#222222",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      type="text"
      warn={false}
    >
      <input
        className="sc-bdVaJa boyrIJ"
        disabled={false}
        placeholder="placeholder"
        required={true}
        type="text"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`should change its style on error 1`] = `
<Input
  disabled={false}
  disabledPlaceholder="disabled"
  error={true}
  placeholder="placeholder"
  success={false}
  type="text"
>
  <styled.input
    disabled={false}
    disabledPlaceholder="disabled"
    error={true}
    placeholder="placeholder"
    success={false}
    theme={
      Object {
        "animation": Object {
          "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
          "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
          "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
          "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
          "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
        },
        "color": Object {
          "black": "#222222",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={true}
  >
    <StyledComponent
      disabled={false}
      disabledPlaceholder="disabled"
      error={true}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "fldTDd",
            "rules": Array [
              "
",
              [Function],
              "
&:disabled {
  background-color: ",
              [Function],
              ";
}
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": Object {
                "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
                "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
                "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
                "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
                "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
              },
              "color": Object {
                "black": "#222222",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <input
            class="sc-bdVaJa fldTDd"
            placeholder="placeholder"
            type="text"
          />,
        }
      }
      placeholder="placeholder"
      success={false}
      theme={
        Object {
          "animation": Object {
            "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
            "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
            "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
            "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
            "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
          },
          "color": Object {
            "black": "#222222",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      type="text"
      warn={true}
    >
      <input
        className="sc-bdVaJa fldTDd"
        disabled={false}
        placeholder="placeholder"
        type="text"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`should change its style on success 1`] = `
<Input
  disabled={false}
  disabledPlaceholder="disabled"
  error={false}
  placeholder="placeholder"
  success={true}
  type="text"
>
  <styled.input
    disabled={false}
    disabledPlaceholder="disabled"
    error={false}
    placeholder="placeholder"
    success={true}
    theme={
      Object {
        "animation": Object {
          "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
          "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
          "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
          "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
          "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
        },
        "color": Object {
          "black": "#222222",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <StyledComponent
      disabled={false}
      disabledPlaceholder="disabled"
      error={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "lhNESF",
            "rules": Array [
              "
",
              [Function],
              "
&:disabled {
  background-color: ",
              [Function],
              ";
}
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": Object {
                "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
                "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
                "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
                "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
                "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
              },
              "color": Object {
                "black": "#222222",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <input
            class="sc-bdVaJa lhNESF"
            placeholder="placeholder"
            type="text"
          />,
        }
      }
      placeholder="placeholder"
      success={true}
      theme={
        Object {
          "animation": Object {
            "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
            "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
            "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
            "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
            "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
          },
          "color": Object {
            "black": "#222222",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      type="text"
      warn={false}
    >
      <input
        className="sc-bdVaJa lhNESF"
        disabled={false}
        placeholder="placeholder"
        type="text"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`should render a input 1`] = `
<Input
  disabled={false}
  disabledPlaceholder="disabled"
  error={false}
  placeholder="placeholder"
  success={false}
  type="text"
>
  <styled.input
    disabled={false}
    disabledPlaceholder="disabled"
    error={false}
    placeholder="placeholder"
    success={false}
    theme={
      Object {
        "animation": Object {
          "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
          "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
          "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
          "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
          "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
        },
        "color": Object {
          "black": "#222222",
          "darkGray": "#515151",
          "error": "#dd3333",
          "gray": "#a9abae",
          "lightGray": "#e5e5e5",
          "overlay": "rgba(0, 0, 0, .15)",
          "primary": "#0081c8",
          "secondary": "#00245f",
          "success": "#33bb33",
          "warn": "#dd3333",
          "white": "#fefefe",
        },
        "font": Object {
          "color": "#222222",
          "family": "\\"Ubuntu\\", sans-serif",
          "size": "16px",
          "spacing": 0,
        },
        "shape": Object {
          "border": ".125rem solid rgba(0, 0, 0, .15)",
          "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
          "margin": ".25rem .125rem",
          "maxWidth": "1280px",
          "padding": ".75rem .875rem",
          "radius": ".5rem",
          "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
          "size": "16px",
        },
        "transition": Object {
          "time": ".3s ease",
        },
      }
    }
    type="text"
    warn={false}
  >
    <StyledComponent
      disabled={false}
      disabledPlaceholder="disabled"
      error={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "boyrIJ",
            "rules": Array [
              "
",
              [Function],
              "
&:disabled {
  background-color: ",
              [Function],
              ";
}
",
            ],
          },
          "defaultProps": Object {
            "theme": Object {
              "animation": Object {
                "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
                "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
                "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
                "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
                "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
              },
              "color": Object {
                "black": "#222222",
                "darkGray": "#515151",
                "error": "#dd3333",
                "gray": "#a9abae",
                "lightGray": "#e5e5e5",
                "overlay": "rgba(0, 0, 0, .15)",
                "primary": "#0081c8",
                "secondary": "#00245f",
                "success": "#33bb33",
                "warn": "#dd3333",
                "white": "#fefefe",
              },
              "font": Object {
                "color": "#222222",
                "family": "\\"Ubuntu\\", sans-serif",
                "size": "16px",
                "spacing": 0,
              },
              "shape": Object {
                "border": ".125rem solid rgba(0, 0, 0, .15)",
                "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
                "margin": ".25rem .125rem",
                "maxWidth": "1280px",
                "padding": ".75rem .875rem",
                "radius": ".5rem",
                "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
                "size": "16px",
              },
              "transition": Object {
                "time": ".3s ease",
              },
            },
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <input
            class="sc-bdVaJa boyrIJ"
            placeholder="placeholder"
            type="text"
          />,
        }
      }
      placeholder="placeholder"
      success={false}
      theme={
        Object {
          "animation": Object {
            "bounce": "
  @keyframes bounce {
    from {
      bottom: 0;
    }
    25% {bottom: .5rem;}
    to {
      bottom: 0
    }
  }
  animation: bounce .3s ease
",
            "fadeIn": "
  @keyframes fadeIn {
    from {
      opacity: 0;
    }
    
    to {
      opacity: 1;
    }
  }
  animation: fadeIn .3s ease
",
            "fadeOut": "
  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    
    to {
      opacity: 0;
    }
  }
  animation: fadeOut .3s ease
",
            "popIn": "
  @keyframes popIn {
    from {
      transform: scale(0);
    }
    
    to {
      transform: scale(1);
    }
  }
  animation: popIn .3s ease
",
            "popOut": "
  @keyframes popOut {
    from {
      transform: scale(1);
    }
    
    to {
      transform: scale(0);
    }
  }
  animation: popOut .3s ease
",
          },
          "color": Object {
            "black": "#222222",
            "darkGray": "#515151",
            "error": "#dd3333",
            "gray": "#a9abae",
            "lightGray": "#e5e5e5",
            "overlay": "rgba(0, 0, 0, .15)",
            "primary": "#0081c8",
            "secondary": "#00245f",
            "success": "#33bb33",
            "warn": "#dd3333",
            "white": "#fefefe",
          },
          "font": Object {
            "color": "#222222",
            "family": "\\"Ubuntu\\", sans-serif",
            "size": "16px",
            "spacing": 0,
          },
          "shape": Object {
            "border": ".125rem solid rgba(0, 0, 0, .15)",
            "float": "0 .5rem .5rem .125rem rgba(0, 0, 0, .15)",
            "margin": ".25rem .125rem",
            "maxWidth": "1280px",
            "padding": ".75rem .875rem",
            "radius": ".5rem",
            "shadow": "0 .25rem .25rem 0 rgba(0, 0, 0, .15)",
            "size": "16px",
          },
          "transition": Object {
            "time": ".3s ease",
          },
        }
      }
      type="text"
      warn={false}
    >
      <input
        className="sc-bdVaJa boyrIJ"
        disabled={false}
        placeholder="placeholder"
        type="text"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;
